--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "debug": "~2.6.9",
     "dotenv": "^17.2.3",
     "express": "~4.16.1",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.1.2",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
