--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "dev": "nodemon app.js  "
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^17.2.3",
     "express": "~4.16.1",
-    "mongodb": "^7.0.0",
-    "mongoose": "^9.1.2",
+    "jsonwebtoken": "^9.0.3",
+    "mongoose": "^8.9.0",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
